Issues/95 pmd rules (#100)